// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledInputFormikField With Zod schema automatically adds attributes from Zod schema 1`] = `
<div>
  <div
    data-cy="InputField-myAttribute"
  >
    <div>
      <input
        fontSize="14px"
        id="input-myAttribute"
        maxLength={100}
        minLength={10}
        name="myAttribute"
        onBlur={[Function]}
        onChange={[Function]}
        required={true}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`StyledInputFormikField With Zod schema automatically adds attributes from Zod schema on nested field 1`] = `
<div>
  <div
    data-cy="InputField-my.nested.attribute"
  >
    <div>
      <input
        fontSize="14px"
        id="input-my.nested.attribute"
        maxLength={100}
        minLength={10}
        name="my.nested.attribute"
        onBlur={[Function]}
        onChange={[Function]}
        required={true}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`StyledInputFormikField With Zod schema automatically adds attributes from Zod schema on nullable field 1`] = `
<div>
  <div
    data-cy="InputField-myAttribute"
  >
    <div>
      <input
        fontSize="14px"
        id="input-myAttribute"
        name="myAttribute"
        onBlur={[Function]}
        onChange={[Function]}
        required={false}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`StyledInputFormikField With Zod schema automatically adds attributes from Zod schema on number field 1`] = `
<div>
  <div
    data-cy="InputField-myAttribute"
  >
    <div>
      <input
        fontSize="14px"
        id="input-myAttribute"
        max={100}
        min={10}
        name="myAttribute"
        onBlur={[Function]}
        onChange={[Function]}
        required={true}
        type="number"
      />
    </div>
  </div>
</div>
`;

exports[`StyledInputFormikField With Zod schema automatically adds attributes from Zod schema on optional field 1`] = `
<div>
  <div
    data-cy="InputField-myAttribute"
  >
    <div>
      <input
        fontSize="14px"
        id="input-myAttribute"
        name="myAttribute"
        onBlur={[Function]}
        onChange={[Function]}
        required={false}
        type="text"
      />
    </div>
  </div>
</div>
`;

exports[`StyledInputFormikField renders default options 1`] = `
<div>
  <div
    data-cy="InputField-myAttribute"
  >
    <div>
      <input
        fontSize="14px"
        id="input-myAttribute"
        name="myAttribute"
        onBlur={[Function]}
        onChange={[Function]}
      />
    </div>
  </div>
</div>
`;
